--- a/gb/20/9/9/n12391959.md
+++ b/gb/20/9/9/n12391959.md
@@ -1,118 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><ahref="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><ahref="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><ahref="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><ahref="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><ahref="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><ahref="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>秋刀鱼防动脉硬化！青背鱼通血管 鱼罐头更补钙</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/Pacific-saury_1231226449-600x400.jpg" />
-<h6>秋刀鱼等青背鱼富含不饱和脂肪酸DHA和EPA，有助防失智和心血管疾病。(Shutterstock)
-</h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/Pacific-saury_1231226449.jpg" class="" data-thumbnail="true" />
+<h6></h6>
 <hr>
-<p><span style="color: #188638;">【编者按】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E8%83%8C%E9%B1%BC.md#1">青背鱼</a>又称“青物”，含有丰富的DHA和EPA，有益于减少<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A1%80%E8%84%82.md#1">血脂</a>、血栓，通畅血管，还能防失智症。我们常吃的秋刀鱼、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%99%E4%B8%81%E9%B1%BC.md#1">沙丁鱼</a>、竹荚鱼都属于青背鱼。其中，秋天盛产的秋刀鱼脂肪极为丰富，能预防动脉硬化；而夏天吃沙丁鱼则可预防心脏疾病。</span></p>
-<p>一般人都会说“吃<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E8%83%8C%E9%B1%BC.md#1">青背鱼</a>比较健康”，但青背鱼并非单指某一种鱼，而是“鱼背呈现青绿色的鱼种”，又称“青物”。值得注意的是，青背鱼的鱼肉并不是绿色的，而是红肉或白肉。换句话说，青背鱼并非生物学上的分类，而是仅就其外观特征区分，大多是竹?鱼、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%99%E4%B8%81%E9%B1%BC.md#1">沙丁鱼</a>或秋刀鱼这类鱼种。</p>
-<p>青背鱼富含有益身体的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%8D%E9%A5%B1%E5%92%8C%E8%84%82%E8%82%AA%E9%85%B8.md#1">不饱和脂肪酸</a>DHA（二十二碳六烯酸）与EPA（二十碳五烯酸）等鱼油成分。此外，这类鱼种还含有丰富的维生素B1与泛酸，有助于人体分解糖类，并将之转化成活动所需的热量，借此避免脂肪囤积。</p>
-<p>现代人往往摄取过多糖类，不知不觉提高了生活习惯病的风险，故建议在日常饮食中有意识地多吃青背鱼以维持健康。</p>
-<h2><span style="color: #188638;">青背鱼好处：防失智、降<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A1%80%E8%84%82.md#1">血脂</a>、通血管</span></h2>
-<p>●?<strong>有助降低<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BF%83%E8%A1%80%E7%AE%A1%E7%96%BE%E7%97%85.md#1">心血管疾病</a></strong></p>
-<p>在北极海和北大西洋间的格陵兰冰雪地带，住着美洲原住民“因纽特人”。令科学家不解的是，由于当地气候严寒，因纽特人几乎不吃蔬菜，但死于心脏或血液疾病的概率却很低。经过研究才知道，因纽特人经常生吃富含<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%8D%E9%A5%B1%E5%92%8C%E8%84%82%E8%82%AA%E9%85%B8.md#1">不饱和脂肪酸</a>的海豹与青背鱼肉及内脏。</p>
-<p>近年来随着外来饮食文化的入侵，烹调方式也跟着改变，可能导致因纽特人必须开始面对心肌梗塞与肥胖等问题。</p>
-<p><strong>●?含DHA，有助活化大脑</strong></p>
-<p>早自1980年代后半，DHA就开始受到各界关注。DHA属于多元不饱和脂肪酸，尤其以鱼油含量最丰。它在不饱和脂肪酸里属于omega-3系的脂肪酸，置于常温之下也不易凝固，可有效活化大脑细胞、增强记忆力与智能指数。</p>
-<p>此外，DHA还有预防与改善失智的效果，日常饮食建议多加摄取。</p>
-<p><strong>●?含EPA，预防血脂异常与血液栓塞</strong></p>
-<p>EPA和DHA一样，同属多元不饱和脂肪酸，鱼油中含量丰富。EPA又称IPA，在1960年代后半即有科学家发现，它具有维护血管与血液等循环器官健康的功效。EPA可降低血液里的中性脂肪、预防血栓形成，达到清澈血液的作用。此外，EPA还能预防血脂异常，避免动脉硬化或心肌梗塞。</p>
-<h2><span style="color: #188638;">鱼罐头的钙质比鲜鱼还丰富</span></h2>
-<p>罐装鱼肉由于经过高压加热，因此连骨头都能吃，钙质含量远超过无法食用鱼骨的鲜鱼。此外，除了DHA与EPA之外，鱼罐头的维生素D、E与烟碱酸等营养成分也很丰富，不论鲔鱼、鲭鱼或秋刀鱼等都很常见。</p>
-<p>选购时需注意，油渍罐头热量较高；味增煮则盐分较多；建议以清爽养生的水煮罐头为主。（推荐阅读：<span style="text-decoration: underline;"><span style="color: #188638;"><a style="color: #188638; text-decoration: underline;" href=><a href="https://github.com/19920513/djy/blob/master/gb/20/3/30/n11989355.md#1" target="_blank" rel="noopener noreferrer">罐头不要直接吃 营养博士：这样煮更健康</a></span></span>）</p>
-<figure id="attachment_11989669" aria-describedby="caption-attachment-11989669" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/tuna-can-food-ccp-virus-covid-19_327330668.jpg"><img class="size-large wp-image-11989669" src="https://i.epochtimes.com/assets/uploads/2020/03/tuna-can-food-ccp-virus-covid-19_327330668-600x400.jpg" alt="罐头因储存时间长，在疫情期间是囤粮必备，但要怎么吃得营养健康？(Shutterstock)" width="600" b="400" /></a><figcaption id="caption-attachment-11989669" class="wp-caption-text">鱼罐头经高压加热，连骨头都能吃，钙质含量远超过无法食用鱼骨的鲜鱼。(Shutterstock)</figcaption></figure>
-<h2><span style="color: #188638;">烹调时如何去除鱼肉腥味？</span></h2>
-<p>鱼肉的腥味来源为油脂、血合肉与黏液。料理前可将鱼肉稍煮一下或余烫去腥；接着放入煮滚的酱汁里，煮开后转小火。酱汁中可加入具去腥效果的生姜或梅干，并注意不要煮过头。</p>
-<h2><span style="color: #188638;">竹荚鱼营养均衡、秋刀鱼防动脉硬化 5种青背鱼营养又美味</span></h2>
-<h3>竹荚鱼：营养均衡的代表性青背鱼</h3>
-<figure id="attachment_12392253" aria-describedby="caption-attachment-12392253" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/Horse-mackerel-fz-health11.jpg"><img class="size-large wp-image-12392253" src="https://i.epochtimes.com/assets/uploads/2020/09/Horse-mackerel-fz-health11-600x336.jpg" alt="竹荚鱼是营养均衡的代表性青背鱼。（方舟文化提供／大纪元合成）" width="600" b="336" /></a><figcaption id="caption-attachment-12392253" class="wp-caption-text">竹荚鱼是营养均衡的代表性青背鱼。（方舟文化提供／大纪元合成）</figcaption></figure>
-<p>竹?鱼的料理方式多元，无论是做成生鱼片、盐烤或晒成一夜干都很适合；小型竹?鱼还能油炸做成南蛮渍带骨食用，可充分补充钙质。曝晒过的竹?鱼，其蛋白质与优质鱼油的含量会比鲜鱼多出两倍以上，还能达到杀菌、使风味更浓缩的效果。</p>
-<p>竹?鱼的别称为真鲹或瓜仔鱼，其鱼体侧线有尖锐坚硬的突起棱鳞，烹煮时必须先行切除。日本宫崎县的冷泡饭，以及千叶县的葱姜味噌拌鱼肉等乡土料理，多会使用竹?鱼等鱼类入菜。</p>
-<p><strong>●?人工养殖的比例逐年增加</strong></p>
-<p>各种原属天然鱼种的竹荚鱼，近年来人工养殖的比例有增高趋势，早期被称为品牌鱼的关竹荚鱼即为一例。商家会把养殖的关竹荚鱼碎切后加工贩售，让民众可用便宜的价钱享受美味。</p>
-<h3>秋刀鱼：最具代表性的秋季食材</h3>
-<figure id="attachment_12392256" aria-describedby="caption-attachment-12392256" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/saury-fz-health11.jpg"><img class="size-large wp-image-12392256" src="https://i.epochtimes.com/assets/uploads/2020/09/saury-fz-health11-600x336.jpg" alt="秋刀鱼是秋季盛产的青背鱼，富含优质脂肪，可预防动脉硬化等生活习惯病。（方舟文化提供／大纪元合成）" width="600" b="336" /></a><figcaption id="caption-attachment-12392256" class="wp-caption-text">秋刀鱼是秋季盛产的青背鱼，富含优质脂肪，能预防动脉硬化。（方舟文化提供／大纪元合成）</figcaption></figure>
-<p>秋刀鱼富含优质脂肪，可补充人体所需营养，并预防动脉硬化等生活习惯病。之所以称其为秋刀鱼，可能是因为其外型修长如刀刃，且于秋季最为盛产的缘故，可说是最具代表性的食材。</p>
-<p>在东亚地区，秋刀鱼是很常见的食用鱼种。当一尾尾肥美新鲜的秋刀鱼陆续上市，便会令人凤受到浓浓的秋意。这个时节的秋刀鱼价格相对便宜，适用于各式各样的料理。但为避免过度捕捞，日本现已提出“渔获枠”等新规范，试图以此上限稳定秋刀鱼的渔获量。</p>
-<p><strong>●?秋刀鱼搭配萝卜泥有助淀粉消化</strong></p>
-<p>秋刀鱼等脂肪较多的鱼类适合搭配萝卜泥一同食用，可促进米饭里的淀粉消化酵素充分发挥作用。</p>
-<p><strong>●?微苦的内脏也很美味</strong></p>
-<p>秋刀鱼没有胄袋、肠子较短，排泄物残留的时间很短，因此内脏较无腥躁与异味，可直接食用，滋味微苦。</p>
-<h3>沙丁鱼：夏季油脂最丰可预防血栓</h3>
-<figure id="attachment_12392255" aria-describedby="caption-attachment-12392255" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/sardine-fz-health11.jpg"><img class="size-large wp-image-12392255" src="https://i.epochtimes.com/assets/uploads/2020/09/sardine-fz-health11-600x336.jpg" alt="沙丁鱼一到夏季油脂就会变多，含有丰富的DHA，可预肪胆固醇过高、心脏病、血栓形成。（方舟文化提供／大纪元合成）" width="600" b="336" /></a><figcaption id="caption-attachment-12392255" class="wp-caption-text">沙丁鱼到夏季油脂会变多，含有丰富DHA，可预防血栓形成。（方舟文化提供／大纪元合成）</figcaption></figure>
-<p>关于“沙丁鱼”这个名称的语源有很多说法，一说是沙丁鱼最初在意大利萨丁尼亚捕获，因此古希腊语中便称其为sardonios，意即“来自萨丁尼亚岛”。日本主要有真鰯、润目鰯和片口鰯三个品种。沙丁鱼一到夏季油脂就会变多，含有丰富的DHA，可预防胆固醇过高、心脏疾病，还可防止血栓形成。</p>
-<p>由于气候变迁，导致生长环境改变，数十年来沙丁鱼的捕获量落差极大。但近几年沙丁鱼的渔获量已略显增加，可做成鱼丸或煮物等带骨食用的料理。</p>
-<p><strong>●?魩仔鱼是什么？</strong></p>
-<p>片口鰯的稚鱼就是魩仔鱼，长成后即为杂鱼或沙丁鱼。一般的魩仔鱼长约2～5公分，食用后可补充钙质。可用不同的方式加工，制成生魩仔鱼、釜扬魩仔鱼盖饭、魩仔鱼干或小干白鱼等产品。</p>
-<p><strong>●?沙丁鱼的处理方式</strong></p>
-<p>不用菜刀的“手剥法”：切掉鱼头后，将拇指放入中骨和鱼身间，沿着鱼骨边滑边剥开。</p>
-<p>是用菜刀的“大名切”：适合大型沙丁鱼。先将鱼切成三大块后，再切除中间的小鱼骨。</p>
-<h3>??鱼：随着产季与地区而有不同名称</h3>
-<figure id="attachment_12392257" aria-describedby="caption-attachment-12392257" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/Yellowtail-fz-health11.jpg"><img class="size-large wp-image-12392257" src="https://i.epochtimes.com/assets/uploads/2020/09/Yellowtail-fz-health11-600x336.jpg" alt="十二月、一月期间捕获的寒??，不但肉质紧致肥美，营养更是丰富。（方舟文化提供／大纪元合成）" width="600" b="336" /></a><figcaption id="caption-attachment-12392257" class="wp-caption-text">十二月、一月间捕获的寒??，肉质紧致肥美，营养更是丰富。（方舟文化提供／大纪元合成）</figcaption></figure>
-<p>??鱼又名青甘鱼、平安鱼、油甘鱼，是辐鳍鱼纲鲈形目鲈亚目鲹科??属的一种。新加坡称其为“琥珀鱼”，是从英语Amberjack直译而来。有趣的是，??鱼在日本会依照生长期间与地区，而有不同的称呼，据说多达一百种以上。台湾则将??鱼称为青甘鲹、青魽、青甘等。</p>
-<p>??鱼的脂肪较多，适合用于照烧煮或涮涮锅等料理。特别是准备于春季产卵，十二月、一月期间捕获的寒??，不但肉质紧致肥美，更因为营养丰富，口感格外美味。</p>
-<p><strong>●???鱼萝卜煮</strong></p>
-<p>??鱼的油脂较多，适合搭配萝卜一同煮成??鱼萝卜煮。入味的萝卜还可补充??鱼所欠缺的维生素C，可说是两相得宜。</p>
-<h3>鲭鱼：腥味较重，可腌渍或做柴鱼片，用途极为广泛</h3>
-<figure id="attachment_12392254" aria-describedby="caption-attachment-12392254" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/Mackerel-fz-health11.jpg"><img class="size-large wp-image-12392254" src="https://i.epochtimes.com/assets/uploads/2020/09/Mackerel-fz-health11-600x336.jpg" alt="鲭鱼属于腥味较重的青背鱼，较难保存，多数情况下都是以香料或醋腌渍。（方舟文化提供／大纪元合成）" width="600" b="336" /></a><figcaption id="caption-attachment-12392254" class="wp-caption-text">鲭鱼属于腥味较重的青背鱼，较难保存，多以香料或醋腌渍。（方舟文化提供／大纪元合成）</figcaption></figure>
-<p>鲭鱼一般通称青花鱼，可分为白腹鲭（日本鲭）与花腹鲭（澳洲鲭）等。花腹鲭要比白腹鲭来得小一些，因腹部浑圆，体侧带有斑点而得名，常用作柴鱼片的原料。白腹鲭的产季为秋、冬季，花腹鲭则在夏季。目前市面上还有一种名为大西洋鲭（挪威鲭）的鲭鱼，体侧带有直线条，常用于鲭鱼罐头等加工制品。</p>
-<p>因鲭鱼较难保存且带有特殊腥味，多数情况下都是以香料或醋腌渍，可同时达到保存与去腥的效果，方便后续烹煮。</p>
-<p><strong>●?可直接下锅烹调的薄盐鲭鱼</strong></p>
-<p>薄盐鲭鱼因添加了食盐，易于保存。可用平底锅香煎，再搭配蔬菜或汤品，就成了简单美味的主菜。</p>
-<p>摘自《<span style="color: #188638;"><a style="color: #188638;" href="https://www.books.com.tw/products/0010853151" target="_blank" rel="noopener noreferrer">来自日本NHK打造健康身体的食材大全</a></span>》 方舟文化出版</p>
-<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/19920513/djy/blob/master/gb/17/4/11/n9025454.md#1" target="_blank" rel="noopener noreferrer">别吃这12种海鲜！为何不要吃 + 吃什么鱼好</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/19920513/djy/blob/master/gb/17/1/19/n8722877.md#1" target="_blank" rel="noopener noreferrer">新鲜鱼怎么挑？ 4技巧让你成为挑鱼高手</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/19920513/djy/blob/master/gb/19/3/6/n11092155.md#1" target="_blank" rel="noopener noreferrer">降坏胆固醇 增好胆固醇 你该吃这些食物</a></span></h3>
-<p>责任编辑：李清风◇</p>
-
-<hr>
-
-
-<strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/5/n11502138.md#1">血管通了人就轻松   如何预防动脉栓塞？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/30/n11989355.md#1">罐头不要直接吃 营养博士：这样煮更健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/9/n12018374.md#1">不吃晚餐减肥好吗？40岁后不挨饿自然瘦的方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/12/n12101834.md#1">三道鲔鱼罐头料理 制作简单 营养又美味</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/29/n12147306.md#1">鱼腥草是“天然抗生素” 抗菌消炎防感染</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/20/n12199967.md#1">胆固醇降不下来？高胆固醇食物不是最大元凶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/4/n12306553.md#1">忧郁症失智症都能防 医师：健脑首推地中海饮食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942570.md#1">酵素能促进排便？营养师：治标不治本</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934796.md#1">这一食物是良药 每天吃两个患癌风险降45%</a></li>
-<hr>
-
-
-<strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
-<hr>
-
-<strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940368.md#1">【未解之谜】ChatGPT技术 犹太传说中早就有了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940235.md#1">神韵艺术考级中心——最顶级中国古典舞教学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13905926.md#1">《兰亭集序》背后的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919303.md#1">【医案】深宫美人百不知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943403.md#1">【时事军事】战争后果已显 俄罗斯前景黯淡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944414.md#1">【舞蹈】王琛说舞蹈 第五集：怎么坐 更精神（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942644.md#1">【车评】大红杉之美 2023 Toyota Sequoia Capstone</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943265.md#1">中共换届 赵乐际料接栗战书 韩正或接王岐山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943153.md#1">最强大护照排名 阿联酋第一 台湾72 中国128</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942101.md#1">10种从不让你担心质量的Costco产品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943038.md#1">艾成离世200天 家族大阵仗来台办感恩餐会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943835.md#1">孙海英在美靠捡垃圾维生？真相反转打脸五毛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943772.md#1">甄子丹出任中共政协委员 称反送中是暴动惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942636.md#1">小S两女儿花样年华 许氏姐妹拍摄杂志照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943735.md#1">掌掴事件宿怨未了 克里斯·洛克批威尔?史密斯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942844.md#1">香蕉放两周不会坏？ 专家教你保存方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943411.md#1">日本营养学家分享长寿秘诀：每天吃5种食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942644.md#1">【车评】大红杉之美 2023 Toyota Sequoia Capstone</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943535.md#1">破坏婚姻关系的最大元凶是啥？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944054.md#1">2023年德州房地产 现况与展望</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/9/n12391959.htm">秋刀鱼防动脉硬化！青背鱼通血管 鱼罐头更补钙</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/9/9/n12391959.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
