--- a/gb/24/12/27/n14399231.md
+++ b/gb/24/12/27/n14399231.md
@@ -14,18 +14,12 @@
 <figure id="attachment_14399234" aria-describedby="caption-attachment-14399234" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14399234-734753.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-medium wp-image-14399234" src="https://i.epochtimes.com/assets/uploads/2024/12/id14399234-734753-450x338.jpg" alt="" width="450" b="338"></a><figcaption id="caption-attachment-14399234" class="wp-caption-text">MD<br />第2层健保拟纳病体 民团吁加速精算落地执行<br />国卫院日前发表第2层健保政策险可行方案，拟全民<br />包含病体在内皆可投保，由政府承担开办前5年病体<br />财务风险，民团则呼吁相关单位尽速精算内容，推动<br />方案落地执行才是关键。<br />中央社记者陈婕翎摄 113年12月10日<br />（中央社）</figcaption></figure>
 <p>责任编辑：陈真</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650449.md#1">马太鞍溪堰塞湖增设微地动仪 强化监测预警功能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650405.md#1">雄狮部队女士官BMI超标 为再签3年伪造体检表遭判刑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649563.md#1">北市惊传虐猫 动保处：将饲主列入黑名单</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648842.md#1">小红书涉上千诈骗案 台内政部：禁用一年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648868.md#1">政院：全面禁用厨余养猪 给1年时间转型饲料养猪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648803.md#1">台湾测速照相密度是日本的307倍 警政署：半年内通盘检讨设置标准　</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648797.md#1">交通部修法明定大货车驾车时间不得逾10小时 工会：难以改善过劳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648169.md#1">中制酒测器遭疑洗产地 警政署：调查中</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648143.md#1">中油三接涉浮报预算 检调搜索讯后全数请回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648073.md#1">诈团员工申请失业给付 劳长：若违法无法领</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">中共淫乱的前生今世（5）公共情妇门</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
